Print failure message.

--- a/templates/summary.twig
+++ b/templates/summary.twig
@@ -18,8 +18,8 @@
     {% endif %}
     </div>
 
-    {% if message %}
-    <p>{{ message }}</p>
+    {% if error %}
+    <p class="status--failed">{{ error }}</p>
     {%  endif %}
 
     <div>
