Use consistent verbiage in messages,

--- a/templates/summary.twig
+++ b/templates/summary.twig
@@ -18,8 +18,8 @@
     {% endif %}
     </div>
 
-    {% if error %}
-    <p class="status--failed">{{ error }}</p>
+    {% if message %}
+    <p class="status--failed">{{ message }}</p>
     {%  endif %}
 
     <div>
