--- a/templates/cal-download.twig
+++ b/templates/cal-download.twig
@@ -1,12 +1,20 @@
 <article class="calendar">
     <h2 class="calendar__title">{{ title }}</h2>
+    {% if url != '' %}
     <a class="calendar__link--subscribe" href="{{ url }}">
         <i class="calendar__link__icon">{{ icon | raw }}</i>
         <span class="calendar__link__text">Subscribe</span>
         <span class="invisible"> to {{ title }}</span>
     </a>
+    {% endif %}
     <div class="calendar__updated">
         <span class="calendar__updated__label">Last Updated:</span>
-        <time class="calendar__updated__time">{{ generated | date("F jS Y \\a\\t g:ia \\E\\T", timezone="America/New_York") }}</time>
+        <time class="calendar__updated__time" datetime="{{ generated | date("Y-m-d\\TH:i:s", timezone="America/New_York") }}">
+            {% if generated > 0 %}
+            {{ generated | date("F jS Y \\a\\t g:ia \\E\\T", timezone="America/New_York") }}
+            {% else %}
+            N/A
+            {% endif %}
+        </time>
     </div>
 </article>
