--- a/templates/page--head.twig
+++ b/templates/page--head.twig
@@ -3,4 +3,14 @@
     <title>{{ title }} | US Soccer iCal Feeds</title>
     <link href="https://fonts.googleapis.com/css?family=Monda:400,700" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" media="all">
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-44787467-6', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </head>
