Fix ampersand issue in team name.

--- a/templates/event.twig
+++ b/templates/event.twig
@@ -1,6 +1,6 @@
 BEGIN:VEVENT
 UID:{{ uid }}
-SUMMARY:{{ summary }}
+SUMMARY:{{ summary|raw }}
 {% if location %}
 LOCATION:{{ location }}
 {% endif %}
