Update footer text.

--- a/templates/page--footer.twig
+++ b/templates/page--footer.twig
@@ -7,6 +7,6 @@
     </nav>
 
     <div class="footer__info">
-        <p>These feeds are not associated with the organizations who published the data.</p>
+        <p>These feeds are not associated with the organizations who publish the data.</p>
     </div>
 </footer>
