--- a/templates/page--footer.twig
+++ b/templates/page--footer.twig
@@ -3,6 +3,7 @@
         <ul class="footer__menu">
             <li><a href="/">Subscribe</a></li>
             <li><a href="/status">Status</a></li>
+            <li><a href="http://twitter.com/ChrisAlbrecht" target="_blank">Twitter</a></li>
         </ul>
     </nav>
 
