--- a/templates/page--head.twig
+++ b/templates/page--head.twig
@@ -3,6 +3,7 @@
     <title>{{ title }} | US Soccer iCal Feeds</title>
     <link href="https://fonts.googleapis.com/css?family=Monda:400,700" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" media="all">
+    <meta name="description" content="Subscribe to live calendars for the US Soccer Men's and Women's National Teams and the 2017 Gold Cup tournament!"/>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
