--- a/templates/page--header.twig
+++ b/templates/page--header.twig
@@ -1,5 +1,5 @@
 <header>
-    <img id="crest" src="//cdn-us-ec.yottaa.net/5682eca20b534438800014b5/www.ussoccer.com/v~13.1d/~/media/upload/us-soccer-logo.png?yocs=6_b_&amp;yoloc=us" data-yo-delaytype="lazy" data-yo-src="//cdn-us-ec.yottaa.net/5682eca20b534438800014b5/www.ussoccer.com/v~13.1d/~/media/upload/us-soccer-logo.png?yocs=6_b_&amp;yoloc=us">
+    <img id="crest" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/United_States_Soccer_Federation_logo_2016.svg/1024px-United_States_Soccer_Federation_logo_2016.svg.png">
     <div class="header--headings">
         <div class="header--site-name">U.S. Soccer iCal Feeds</div>
         <h1 class="header--page-title">{{ title }}</h1>
